fix overflow

--- a/less/lists.less
+++ b/less/lists.less
@@ -98,6 +98,9 @@
   .location {
     line-height: normal;
     margin-right: 5px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .list-item-title-lang {
